--- a/src/component/header/header.styles.scss
+++ b/src/component/header/header.styles.scss
@@ -6,9 +6,15 @@
     margin-bottom: 25px;
 
     .logo-container {
-        height: 100%;
-        width: 70px;
-        padding: 25px;
+        height: 100px;
+        width: 170px;
+        padding: 0 25px 25px 25px;
+
+        .logo {
+            
+            width: 100%;
+            height: 100%;
+        }
     }
 
     .options {
