--- a/src/component/button/button.styles.scss
+++ b/src/component/button/button.styles.scss
@@ -20,6 +20,7 @@
       background-color: white;
       color: black;
       border: 1px solid black;
+      padding: 0 14px 0 14px;
     }
 
     &.google-sign-in {
